--- a/app/design/adminhtml/default/default/template/index/notifications.phtml
+++ b/app/design/adminhtml/default/default/template/index/notifications.phtml
@@ -5,17 +5,18 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Index_Block_Adminhtml_Notifications $this */
 ?>
-<?php $_processes = $this->getProcessesForReindex()?>
-<?php if($_processes):?>
+<?php if($processes = $this->getProcessesForReindex()): ?>
 <div class="notification-global">
-    <strong><?= $this->helper('index')->__('One or more of the Indexes are not up to date:') ?></strong>
-    <?= implode(', ', $_processes) ?>.
-    <?= $this->helper('index')->__('Click here to go to <a href="%s">Index Management</a> and rebuild required indexes.', $this->getManageUrl()) ?>
+    <span class="label">
+        <strong><?= $this->helper('index')->__('One or more of the Indexes are not up to date:') ?></strong>
+        <?= implode(', ', $processes) ?>.
+        <?= $this->helper('index')->__('Click here to go to <a href="%s">Index Management</a> and rebuild required indexes.', $this->getManageUrl()) ?>
+    </span>
 </div>
 <?php endif ?>
