--- a/app/design/adminhtml/default/default/template/notification/baseurl.phtml
+++ b/app/design/adminhtml/default/default/template/notification/baseurl.phtml
@@ -5,17 +5,14 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-/**
- * @see Mage_Adminhtml_Block_Notification_Baseurl
- * @var Mage_Adminhtml_Block_Notification_Baseurl $this 
- */
+
+/** @var Mage_Adminhtml_Block_Notification_Baseurl $this */
 ?>
-<?php $_url = $this->getConfigUrl()?>
-<?php if ($_url): ?>
+<?php if ($url = $this->getConfigUrl()): ?>
 <div class="notification-global notification-global-notice">
-    <?= $this->helper('adminhtml')->__('{{base_url}} is not recommended to use in a production environment to declare the Base Unsecure URL / Base Secure URL. It is highly recommended to change this value in your Maho <a href="%s">configuration</a>.', $_url) ?>
+    <?= $this->helper('adminhtml')->__('{{base_url}} is not recommended to use in a production environment to declare the Base Unsecure URL / Base Secure URL. It is highly recommended to change this value in your Maho <a href="%s">configuration</a>.', $url) ?>
 </div>
 <?php endif ?>
