--- a/app/design/adminhtml/default/default/template/dashboard/totalbar.phtml
+++ b/app/design/adminhtml/default/default/template/dashboard/totalbar.phtml
@@ -5,25 +5,19 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Adminhtml_Block_Dashboard_Totals $this */
 ?>
 <?php if(count($this->getTotals()) > 0): ?>
-<div class="box" id="dashboard_diagram_totals">
-    <div class="entry-edit">
-        <table cellspacing="0" width="100%">
-            <tr>
-            <?php foreach( $this->getTotals() as $_total ): ?>
-                <td class="a-center bold">
-                    <span><?= $_total['label'] ?></span><br />
-                    <span class="nowrap" style="font-size:18px; color:#EA7601;"><?= $_total['value'] ?><span style="font-size:14px; color:#DE8946;"><?= $_total['decimals'] ?>
-                </td>
-            <?php endforeach ?>
-            </tr>
-        </table>
+<div class="sales-totalbar box">
+<?php foreach( $this->getTotals() as $total ): ?>
+    <div class="bold">
+        <span><?= $total['label'] ?></span>
+        <span class="emph large"><?= $total['value'] ?></span>
     </div>
+<?php endforeach ?>
 </div>
 <?php endif ?>
